=== 4.45.0 (2017-04-01)

* Correctly handle datasets with offsets but no limits used in compound datasets on MSSQL <2012 (jeremyevans)

* Correctly handle false values in the split_values plugin (bananarne) (#1333)

* Deprecate Dataset#dup/clone and Model.dup/clone (jeremyevans)

* Deprecate the schema and scissors plugins (jeremyevans)

* Deprecate Model.{lazy_attributes,nested_attributes,composition,serialization}_module accessors (jeremyevans)

* Deprecate Database#database_name on MySQL (jeremyevans)

* Deprecate Database#use on MySQL (jeremyevans)

* Make pg_hstore extension no longer update PG_NAMED_TYPES (jeremyevans)

* Deprecate Sequel::PG_NAMED_TYPES (jeremyevans)

* Add columns_updated plugin for making updated columns hash available in after_update and after_save hooks (jeremyevans)

* Deprecate accessing @columns_updated directly in model after_update and after_save hooks (jeremyevans)

* Deprecate Database#{add,remove}_servers when not using a sharded connection pool (jeremyevans)

* Deprecate Database#each_server (jeremyevans)

* Make Model#_valid? private method accept only an options hash (jeremyevans)

* Deprecate returning false from model before hooks to cancel the action, use Model#cancel_action (jeremyevans)

* Handle Model#cancel_action correctly in before hooks when Model#valid? is called (jeremyevans)

* Deprecate Sequel::BeforeHookFailed (jeremyevans)

* Deprecate passing multiple arguments as filter arguments when not using a conditions specifier (jeremyevans)

* Deprecate passing Procs as filter arguments, require they be passed as blocks (jeremyevans)

* Deprecate Sequel::Error::* exception class aliases (jeremyevans)

* Deprecate prepared_statements_associations and prepared_statements_with_pk plugins (jeremyevans)

* Deprecate Sequel::Unbinder, Sequel::UnbindDuplicate, and Dataset#unbind (jeremyevans)

* Deprecating calling Sequel::Qualifier with two arguments (jeremyevans)
